# gazebo_map_creator

./: README.md
gazebo_map_creator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
gazebo_map_creator/src/: gazbeo_map_creator.cpp
gazebo_map_creator_ign/: CMakeLists.txt  README.md  package.xml  setup.py
gazebo_map_creator_ign/scripts/: request_map.py
gazebo_map_creator_ign/src/: gazbeo_map_creator_ign.cpp
gazebo_map_creator_ign/world/: empty.world
gazebo_map_creator_interface/: CMakeLists.txt  package.xml
gazebo_map_creator_interface/srv/: MapRequest.srv
gazebo_map_creator_plugin/: CMakeLists.txt  package.xml
gazebo_map_creator_plugin/script/: request_map.py
gazebo_map_creator_plugin/src/: gazbeo_map_creator.cpp
