<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_map_creator_plugin</name>
  <version>3.5.3</version>
  <description>
    Plugin to provide map creation support
  </description>

  <maintainer email="arshad.mehmood@intel.com">Arshad Mehmood</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_map_creator_interface</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
